[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lp99py"
version = "0.0.1"
authors = [
  { name="Carlos Pinto Machado", email="cpmachado@protonmail.com" },
]
description = "Solution of 99 LISP problems in Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cpmachado/lp99py"
"Bug Tracker" = "https://github.com/cpmachado/lp99py/issues"
